overflow problem resolved

--- a/src/ali.scss
+++ b/src/ali.scss
@@ -1862,3 +1862,7 @@ ul li {
 		}
 	}
 }
+
+.e-popup-full-page{
+	overflow: scroll !important ;
+}
